@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 0.8 - unreleased
 
+  MAHOUT-993:  Some vector dumper flags are expecting arguments. (Andrew Look via robinanil)
+
   MAHOUT-1228: Cleanup .gitignore (Stevo Slavic via ssc)
 
   MAHOUT-1047: CVB hangs after completion (Angel Martinez Gonzalez via smarthi)
